fix: overflow hidden on project

--- a/styles/Home.scss
+++ b/styles/Home.scss
@@ -148,6 +148,7 @@
     }
 
     .project {
+      overflow: hidden;
       position: relative;
       width: 100%;
       height: 100vh;
@@ -264,10 +265,6 @@
           0 22.3px 17.9px rgba(211, 211, 211, 0.042),
           0 41.8px 33.4px rgba(211, 211, 211, 0.05),
           0 100px 80px rgba(211, 211, 211, 0.07);
-        // box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02),
-        //   0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035),
-        //   0 22.3px 17.9px rgba(0, 0, 0, 0.042),
-        //   0 41.8px 33.4px rgba(0, 0, 0, 0.05), 0 100px 80px rgba(0, 0, 0, 0.07);
         @media (max-width: 1300px) {
           width: 500px;
           height: 280px;
@@ -278,8 +275,8 @@
           margin: 0 0 1rem 0;
         }
         @media (max-width: 700px) {
-          width: 300px;
-          height: 180px;
+          width: 280px;
+          height: 160px;
         }
       }
     }
